--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server/app.js",
     "dev": "nodemon server/app.js",
     "init-db": "node server/utils/initDb.js",
+    "reset-db": "node server/utils/initDb.js reset",
     "test": "jest",
     "test:watch": "jest --watch"
   },
