Add User model test script to package.json for Issue #3

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server/app.js",
     "init-db": "node server/utils/initDb.js",
     "reset-db": "node server/utils/initDb.js reset",
+    "test-model": "node server/utils/testUserModel.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
