Add API test script to package.json for Issue #4

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "init-db": "node server/utils/initDb.js",
     "reset-db": "node server/utils/initDb.js reset",
     "test-model": "node server/utils/testUserModel.js",
+    "test-api": "node server/utils/testAPI.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
